Fixing gallery content-width on mobile (part 3)

--- a/index.css
+++ b/index.css
@@ -244,6 +244,9 @@ div.img-small-right img {
 	#about {
 		font-size: 180%;
 }
+#footer {
+	width: 100%;
+}
 	div.img img {
 		width: 100%;
 }
